snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3.pom.sha256
243789807a39dfc42195ad077ea1a3a7648e5bf596f8a0a1d7313fc35cd8a1e4